--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     $stateProvider.state(topicModel1State);
                     $stateProvider.state(topicModel2State);
                     $stateProvider.state(topicModel2RankState);
-                    $urlRouterProvider.otherwise('/trend1State');
+                    $urlRouterProvider.otherwise('/trend1');
                 })
         })();
     </script>
