--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <a class="nav-link" ui-sref="topicModel1" ui-sref-active="active">Topic Model 1</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    <a class="nav-link dropdown-toggle" href="javascript:;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         Topic Model 2
                     </a>
