--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <body ng-app="app" ng-controller="mainController as vm" style="font-family:sans-serif">
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="#">CIV</a>
+        <a class="navbar-brand" href="#">CIV_Team13</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
