--- a/topicModel1/topicModel1.html
+++ b/topicModel1/topicModel1.html
@@ -1,4 +1,5 @@
-<h2 style="text-align:center">Word Trend Visualization</h2>
+<h2 style="text-align:center">
+    Word Trend Visualization</h2>
 <p>&nbsp;</p>
 
 <table align="center">
