--- a/index.html
+++ b/index.html
@@ -163,10 +163,7 @@
                         },
                         xAxis: {
                             type: 'value',
-                            minInterval: 1,
-                            axisLabel:{
-                                textBorderWidth: 200
-                            }
+                            minInterval: 1
                         },
                         yAxis: {
                             type: 'category',
@@ -180,7 +177,8 @@
                             data: []
                         },
                         grid: {
-                            left: 550
+                            left: 550,
+                            right: 200
                         },
                         series: [{
                             name: '',
